Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56414

WebSocket memory leak

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.0 Beta 2
    • 5.7.0
    • WebSockets
    • None
    • Ubuntu 16.04 64 bit, Qt 5.7.0, gcc version 5.4.0
    • b2d610c0ea229e40910fc9aa1bc784d853cfeba8

      If you slightly modify the project from the examples websockets/echoclient.
      I attached modified echoclient project and just use echoserver from samples without any modifications.
      After getting text message websocket should close connection and in onDisconnect handler websocket should connect again. In that case you can see huge memory leaks.

        1. after_5_mins.png
          32 kB
          Aleksey Lysenko
        2. after_start.png
          31 kB
          Aleksey Lysenko
        3. echoclient.tar.gz
          2 kB
          Aleksey Lysenko
        4. echoserver.tar.gz
          3 kB
          Aleksey Lysenko
        For Gerrit Dashboard: QTBUG-56414
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            aleksey_lysenko Aleksey Lysenko
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes